name:                day8
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MrRacoon/day8#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Sutherland
maintainer:          erik.misu@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day8
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , mtl
